# CTGV-System---Versatile-Geometric-Topology-Computing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTGV SYSTEM V1.3 (SOURCE CODE) .txt  Dockerfile  LICENSE  README.md  check_env.py  distributed_demo.py  example.py  gui.py  launcher.py  performance_benchmark.py  publication_readiness_checker.py  publication_readiness_report.txt  pyproject.toml  requirements.txt  setup.py  target_audience_analysis.py  target_audience_analysis.txt
.github/workflows/: ci-cd.yml
ctgv/: __init__.py  arbiter.py  clarification.py  clarification_mechanism.py  distributed_ctgv.py  engine.py  gebit.py  modeler.py  shapes.py  utils.py  vector_field.py
tests/: test_basic.py
